--- a/src/app/layout.scss
+++ b/src/app/layout.scss
@@ -13,7 +13,7 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
-    > div:first-child {
+    .content {
       display: flex;
       flex-direction: column;
       flex: 1 1 auto;
