--- a/src/components/bottomMenu/bottomMenu.module.scss
+++ b/src/components/bottomMenu/bottomMenu.module.scss
@@ -1,10 +1,17 @@
 .bottom_menu {
+  display: flex;
   position: relative;
   width: 100%;
+  height: 60px;
   flex: 0 0 auto;
   border-top: 1px solid #ccc;
   background: white;
   z-index: 1;
+  align-items: center;
+
+  &.is_submit {
+    justify-content: end;
+  }
   ul {
     display: flex;
     height: 40px;
