--- a/src/components/bottomMenu/bottomMenu.module.scss
+++ b/src/components/bottomMenu/bottomMenu.module.scss
@@ -14,6 +14,7 @@
   }
   ul {
     display: flex;
+    width: 100%;
     height: 40px;
     align-items: center;
     justify-content: space-evenly;
