--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,12 @@
 }
 
 * {
-  font-family: 'Roboto', 'pretendard';
+  font-family: "Roboto", "pretendard";
   font-size: 14px;
+}
+
+iframe {
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
