--- a/src/app/layout.scss
+++ b/src/app/layout.scss
@@ -12,7 +12,7 @@
   > div {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 100dvh;
     .content {
       display: flex;
       flex-direction: column;
