--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -1,7 +1,7 @@
 .header {
   position: relative;
   display: flex;
-  height: 60px;
+  min-height: 60px;
   align-items: center;
   justify-content: center;
   border-bottom: 1px solid #D9D9D9;
