유튜브 영상 테스트

--- a/src/components/peed/peed.module.scss
+++ b/src/components/peed/peed.module.scss
@@ -5,6 +5,12 @@
   padding-bottom: 56.25%;
 }
 
+.youtube_thumbnail {
+  position: relative;
+  cursor: pointer;
+  padding-bottom: 56.25%;
+}
+
 .area {
   padding: 20px;
   box-sizing: border-box;
