--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -6,9 +6,13 @@
   justify-content: center;
   border-bottom: 1px solid #D9D9D9;
   font-size: 20px;
+  padding: 0 16px;
   &.is_home {
     justify-content: space-between;
     padding: 0 16px;
+  }
+  &.is_end {
+    justify-content: start;
   }
 }
 
