--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -7,6 +7,7 @@
   border-bottom: 1px solid #D9D9D9;
   font-size: 20px;
   padding: 0 16px;
+  transition: all 0.3s;
   &.is_home {
     justify-content: space-between;
     padding: 0 16px;
