--- a/src/components/snackbar/snackbar.module.scss
+++ b/src/components/snackbar/snackbar.module.scss
@@ -1,21 +1,45 @@
 .snackbar {
-  background-color: #323232;
-  color: #fff;
+  background-color: #333;
+  color: white;
   padding: 16px;
-  margin: 8px 0;
   border-radius: 4px;
-  display: flex;
-  justify-content: space-between; /* 메시지와 버튼 사이에 공간을 둠 */
-  align-items: center; /* 수직 정렬 */
-  transition: opacity 0.3s ease;
-  opacity: 1; /* 애니메이션 효과를 위해 opacity 설정 */
+  margin: 10px 0;
+  position: relative;
+  opacity: 1;
+  transform: translateY(20px);
+  animation: slideIn 0.3s forwards, fadeOut 0.3s 3s forwards;
+  // animation: slideIn 0.3s forwards;
+
+  // &.is_close {
+  //   animation: fadeOut 0.3s forwards;
+  // }
+  @keyframes slideIn {
+    from {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+  @keyframes fadeOut {
+    from {
+      opacity: 1;
+      transform: translateY(0);
+    }
+    to {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+  }
 }
 
 .closeButton {
+  margin-left: 10px;
   background: none;
   border: none;
   color: white;
-  font-size: 18px;
   cursor: pointer;
-  margin-left: 16px; /* 메시지와 버튼 사이의 간격 */
 }
