--- a/src/components/bottomMenu/bottomMenu.module.scss
+++ b/src/components/bottomMenu/bottomMenu.module.scss
@@ -22,6 +22,12 @@
   li {
     width: 100%;
     height: 100%;
+    button {
+      background: #262626;
+      color: white;
+      padding: 8px 12px;
+      border-radius: 6px;
+    }
     a {
       display: flex;
       width: 100%;
