--- a/src/components/bottomMenu/bottomMenu.module.scss
+++ b/src/components/bottomMenu/bottomMenu.module.scss
@@ -22,6 +22,13 @@
   li {
     width: 100%;
     height: 100%;
+    > span {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+      cursor: pointer;
+    }
     button {
       background: #262626;
       color: white;
@@ -36,4 +43,10 @@
       justify-content: center;
     }
   }
+}
+
+.text_bottom {
+  display: flex;
+  text-align: right;
+  
 }
