--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -4,7 +4,7 @@
   min-height: 60px;
   align-items: center;
   justify-content: center;
-  border-bottom: 1px solid #D9D9D9;
+  border-bottom: 1px solid #d9d9d9;
   font-size: 20px;
   padding: 0 16px;
   transition: all 0.3s;
@@ -26,4 +26,27 @@
   width: 24px;
   height: 24px;
   cursor: pointer;
+}
+
+.dropdown {
+  position: absolute;
+  top: calc(100% + 26px);
+  right: 3px;
+  display: flex;
+  width: 90px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: var(--Numbers-4, 4px);
+  border-radius: 2px;
+  /* drop-shadow/0.12+0.8+0.5 */
+  box-shadow: 0px 3px 6px -4px rgba(0, 0, 0, 0.12),
+    0px 6px 16px 0px rgba(0, 0, 0, 0.08), 0px 9px 28px 8px rgba(0, 0, 0, 0.05);
+  li {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 40px;
+    color: #262626;
+  }
 }
