정리 및 번역 테스트중

--- a/src/app/(bottomMenu)/detail/[id]/detail.module.scss
+++ b/src/app/(bottomMenu)/detail/[id]/detail.module.scss
@@ -1,8 +1,5 @@
-.script {
-  padding: 16px;
-  border-radius: 8px;
-  background: #FAFAFA;
-}
-.is_viewing {
-  background: #F0F0F0;
+.detail_page {
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
 }
