메인 1개씩 출력

--- a/src/components/youtubeVideo/youtubevideo.module.scss
+++ b/src/components/youtubeVideo/youtubevideo.module.scss
@@ -22,7 +22,11 @@
   padding: 16px;
   border-radius: 8px;
   background: #FAFAFA;
+
+  // display: none;
 }
-.is_viewing {
+.is_viewing, .is_viewing2 {
   background: #F0F0F0;
+
+  // display: block;
 }
