50분짜리 url 테스트

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -8,6 +8,8 @@
   font-size: 20px;
   padding: 0 16px;
   transition: all 0.3s;
+  background: white;
+  z-index: 10;
   &.is_home {
     justify-content: space-between;
     padding: 0 16px;
