--- a/src/app/layout.scss
+++ b/src/app/layout.scss
@@ -17,6 +17,7 @@
       display: flex;
       flex: 1 1 auto;
       overflow-y: auto;
+      flex-direction: column; // 메인에서 피드가 적을때 이 속성때문에 드롭다운이 안보여짐
     }
   }
 }
