--- a/src/components/loading/loading.module.scss
+++ b/src/components/loading/loading.module.scss
@@ -4,7 +4,7 @@
   top: 0;
   width: 100%;
   height: 100%;
-  background: #fafafa;
+  background: #fdfdfd;
   z-index: 1;
 }
 
@@ -17,7 +17,7 @@
 
   position: absolute;
   top: 0;
-  right: 10%;
+  right: 70px;
   bottom: 0;
   left: 0;
   margin: auto;
