--- a/src/components/support/support.module.scss
+++ b/src/components/support/support.module.scss
@@ -1,3 +1,19 @@
 .support {
-  
+  a {
+    position: relative;
+    display: block;
+    padding: 20px;
+  }
+  .icon {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    display: flex;
+    gap: 16px;
+    svg {
+      width: 16px;
+      height: 16px;
+      cursor: pointer;
+    }
+  }
 }
