--- a/src/app/(buttonMenu)/upload/upload.module.scss
+++ b/src/app/(buttonMenu)/upload/upload.module.scss
@@ -7,11 +7,25 @@
     height: 44px;
     padding: 0 12px;
     border-radius: 5px;
-    border: 1px solid #D9D9D9;
+    border: 1px solid #d9d9d9;
   }
   button {
     font-size: 16px;
     color: #262626;
     white-space: pre;
+  }
+}
+
+.textarea {
+  position: relative;
+  textarea {
+    color: #40a9ff;
+    min-block-size: 82px;
+    max-block-size: 82px;
+  }
+  span {
+    position: absolute;
+    bottom: 10px;
+    left: 12px;
   }
 }
