--- a/src/components/youtubeVideo/youtubevideo.module.scss
+++ b/src/components/youtubeVideo/youtubevideo.module.scss
@@ -3,12 +3,26 @@
   width: 100%;
   height: 0;
   padding-bottom: 56.25%;
+  .time {
+    position: absolute;
+    bottom: 8px;
+    right: 8px;
+    padding: 3px 6px;
+    color: white;
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 6px;
+    z-index: 1;
+  }
 }
 
 .youtube_thumbnail {
   position: relative;
   cursor: pointer;
   padding-bottom: 56.25%;
+
+  // 옵션
+  border-radius: 4px;
+  overflow: hidden;
 }
 
 
