--- a/src/components/youtubeVideo/youtubevideo.module.scss
+++ b/src/components/youtubeVideo/youtubevideo.module.scss
@@ -3,6 +3,7 @@
   width: 100%;
   height: 0;
   padding-bottom: 56.25%;
+  margin-top: 4px;
   .time {
     position: absolute;
     bottom: 8px;
@@ -30,13 +31,26 @@
   overflow: auto;
   height: 100%;
   // @include scroll-hide;
+  &.isMain {
+    .script {
+      background: #fafafa;
+    }
+  }
 }
 .script {
   margin-bottom: 12px;
-  padding: 16px;
+  padding: 20px 16px;
   border-radius: 8px;
   background: #FAFAFA;
   // display: none;
+  span {
+    display: inline-flex;
+    font-size: 12px;
+    color: #8C8C8C;
+  }
+}
+.ko {
+  margin-top: 12px;
 }
 .main {
   display: none;
