--- a/src/components/support/support.module.scss
+++ b/src/components/support/support.module.scss
@@ -16,4 +16,37 @@
       cursor: pointer;
     }
   }
+  .res {
+    display: inline-flex;
+    height: 28px;
+    align-items: center;
+    padding: 0 12px;
+    background: #D9D9D9;
+    border: 1px solid #D9D9D9;
+    color: #262626;
+    &.is_answered {
+      background: #F0F5FF;
+      color: #2F54EB;
+      border-color: #ADC6FF;
+    } 
+  }
+  .content {
+    margin-top: 12px;
+    margin-bottom: 12px;
+  }
+  .inquiried_at {
+    color: #8C8C8C;
+  }
+}
+
+.input {
+  display: flex;
+  height: 44px;
+  align-items: center;
+  input {
+    width: 100%;
+  }
+  button {
+    width: 40px;
+  }
 }
