--- a/src/app/(bottomMenu)/support/support.module.scss
+++ b/src/app/(bottomMenu)/support/support.module.scss
@@ -27,3 +27,19 @@
 .response {
   background: #FAFAFA;
 }
+
+.input {
+  display: flex;
+  height: 44px;
+  align-items: center;
+  border: 1px solid #D9D9D9;
+  input {
+    width: 100%;
+    height: 100%;
+    padding: 0 12px;
+    border-right: 1px solid #D9D9D9;
+  }
+  button {
+    width: 40px;
+  }
+}
